--- a/test/integration/targets/yum/tasks/yum.yml
+++ b/test/integration/targets/yum/tasks/yum.yml
@@ -5,14 +5,14 @@
 
 - name: check sos with rpm
   shell: rpm -q sos
-  failed_when: False
+  ignore_errors: True
   register: rpm_result
 
 - name: verify uninstallation of sos
   assert:
     that:
-        - "yum_result.rc == 0"
-        - "rpm_result.rc == 1"
+        - "yum_result is success"
+        - "rpm_result is failed"
 
 # UNINSTALL AGAIN
 - name: uninstall sos again in check mode
@@ -49,25 +49,21 @@
   yum: name=sos state=present
   register: yum_result
 
-- name: check sos with rpm
-  shell: rpm -q sos
-  failed_when: False
-  register: rpm_result
-
 - name: verify installation of sos
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
-        - "rpm_result.rc == 0"
 
 - name: verify yum module outputs
   assert:
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
+
+- name: check sos with rpm
+  shell: rpm -q sos
 
 # INSTALL AGAIN
 - name: install sos again in check mode
@@ -142,45 +138,38 @@
 # Multiple packages
 - name: uninstall sos and bc
   yum: name=sos,bc state=removed
-  register: yum_result
 
 - name: check sos with rpm
   shell: rpm -q sos
-  failed_when: False
+  ignore_errors: True
   register: rpm_sos_result
 
 - name: check bc with rpm
   shell: rpm -q bc
-  failed_when: False
+  ignore_errors: True
   register: rpm_bc_result
 
 - name: verify packages installed
   assert:
     that:
-        - "rpm_sos_result.rc != 0"
-        - "rpm_bc_result.rc != 0"
+        - "rpm_sos_result is failed"
+        - "rpm_bc_result is failed"
 
 - name: install sos and bc as comma separated
   yum: name=sos,bc state=present
   register: yum_result
 
-- name: check sos with rpm
-  shell: rpm -q sos
-  failed_when: False
-  register: rpm_sos_result
-
-- name: check bc with rpm
-  shell: rpm -q bc
-  failed_when: False
-  register: rpm_bc_result
-
 - name: verify packages installed
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
-        - "rpm_sos_result.rc == 0"
-        - "rpm_bc_result.rc == 0"
+
+- name: check sos with rpm
+  shell: rpm -q sos
+
+- name: check bc with rpm
+  shell: rpm -q bc
 
 - name: uninstall sos and bc
   yum: name=sos,bc state=removed
@@ -194,23 +183,17 @@
     state: present
   register: yum_result
 
-- name: check sos with rpm
-  shell: rpm -q sos
-  failed_when: False
-  register: rpm_sos_result
-
-- name: check bc with rpm
-  shell: rpm -q bc
-  failed_when: False
-  register: rpm_bc_result
-
 - name: verify packages installed
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
-        - "rpm_sos_result.rc == 0"
-        - "rpm_bc_result.rc == 0"
+
+- name: check sos with rpm
+  shell: rpm -q sos
+
+- name: check bc with rpm
+  shell: rpm -q bc
 
 - name: uninstall sos and bc
   yum: name=sos,bc state=removed
@@ -222,23 +205,17 @@
     state: present
   register: yum_result
 
-- name: check sos with rpm
-  shell: rpm -q sos
-  failed_when: False
-  register: rpm_sos_result
-
-- name: check sos with rpm
-  shell: rpm -q bc
-  failed_when: False
-  register: rpm_bc_result
-
 - name: verify packages installed
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
-        - "rpm_sos_result.rc == 0"
-        - "rpm_bc_result.rc == 0"
+
+- name: check sos with rpm
+  shell: rpm -q sos
+
+- name: check sos with rpm
+  shell: rpm -q bc
 
 - name: uninstall sos and bc
   yum: name=sos,bc state=removed
@@ -260,25 +237,21 @@
   yum: name=sos state=present installroot='/'
   register: yum_result
 
-- name: check sos with rpm
-  shell: rpm -q sos --root=/
-  failed_when: False
-  register: rpm_result
-
 - name: verify installation of sos
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
-        - "rpm_result.rc == 0"
 
 - name: verify yum module outputs
   assert:
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
+
+- name: check sos with rpm
+  shell: rpm -q sos --root=/
 
 - name: uninstall sos
   yum:
@@ -296,7 +269,7 @@
 - name: verify installation of the group
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
 
 - name: verify yum module outputs
@@ -304,7 +277,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: install the group again
@@ -316,7 +288,7 @@
 - name: verify nothing changed
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "not yum_result is changed"
 
 - name: verify yum module outputs
@@ -324,7 +296,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: install the group again but also with a package that is not yet installed
@@ -338,7 +309,7 @@
 - name: verify sos is installed
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
 
 - name: verify yum module outputs
@@ -346,7 +317,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: try to install the group again, with --check to check 'changed'
@@ -378,7 +348,7 @@
 - name: verify installation of the non existing group failed
   assert:
     that:
-        - "yum_result.rc == 1"
+        - "yum_result is failed"
         - "not yum_result is changed"
         - "yum_result is failed"
 
@@ -387,7 +357,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: try to install non existing file
@@ -467,7 +436,6 @@
 - name: verify that yum failed
   assert:
     that:
-        - "yum_result.rc == 1"
         - "not yum_result is changed"
         - "yum_result is failed"
 
@@ -499,7 +467,7 @@
 - name: verify installation
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
         - "yum_result is not failed"
 
@@ -508,7 +476,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: install the downloaded rpm again
@@ -520,7 +487,7 @@
 - name: verify installation
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "not yum_result is changed"
         - "yum_result is not failed"
 
@@ -529,7 +496,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: clean up
@@ -546,7 +512,7 @@
 - name: verify installation
   assert:
     that:
-        - "yum_result.rc == 0"
+        - "yum_result is success"
         - "yum_result is changed"
         - "yum_result is not failed"
 
@@ -555,7 +521,6 @@
     that:
         - "'changed' in yum_result"
         - "'msg' in yum_result"
-        - "'rc' in yum_result"
         - "'results' in yum_result"
 
 - name: Create a temp RPM file which does not contain nevra information
