--- a/test/integration/targets/git/tasks/setup.yml
+++ b/test/integration/targets/git/tasks/setup.yml
@@ -8,6 +8,10 @@
     path: "{{ output_dir }}"
     state: directory
 
+- name: SETUP | install git
+  package:
+    name: git
+
 - name: SETUP | verify that git is installed so this test can continue
   shell: which git
 
