--- a/test/integration/targets/hg/tasks/main.yml
+++ b/test/integration/targets/hg/tasks/main.yml
@@ -25,6 +25,10 @@
 - name: clean out the output_dir
   shell: rm -rf {{ output_dir }}/*
 
+- name: install mercurial
+  package:
+    name: mercurial
+
 - name: verify that mercurial is installed so this test can continue
   shell: which hg
 
