--- a/test/integration/targets/subversion/tasks/main.yml
+++ b/test/integration/targets/subversion/tasks/main.yml
@@ -25,6 +25,10 @@
 - name: clean out the output_dir
   shell: rm -rf {{ output_dir }}/*
 
+- name: install subversion
+  package:
+    name: subversion
+
 - name: verify that subversion is installed so this test can continue
   shell: which svn
 
