* Changes to enable network_cli and netconf on modules. * limits connection local for single TC per playbook.

--- a/test/integration/targets/iosxr_logging/tasks/cli.yaml
+++ b/test/integration/targets/iosxr_logging/tasks/cli.yaml
@@ -20,3 +20,6 @@
   with_first_found: "{{ test_items }}"
   loop_control:
     loop_var: test_case_to_run
+
+- name: reset connection
+  meta: reset_connection
