--- a/test/integration/targets/iosxr_system/tasks/cli.yaml
+++ b/test/integration/targets/iosxr_system/tasks/cli.yaml
@@ -20,3 +20,6 @@
   with_first_found: "{{ test_items }}"
   loop_control:
     loop_var: test_case_to_run
+
+- name: reset connection
+  meta: reset_connection
