--- a/test/integration/targets/aci_config_rollback/tasks/main.yml
+++ b/test/integration/targets/aci_config_rollback/tasks/main.yml
@@ -68,7 +68,7 @@
     import_mode: atomic
   register: rollback_rollback
 
-- name: pause execution to let rollback take affect
+- name: pause execution to let rollback take effect
   pause:
     seconds: 15
 
@@ -81,7 +81,9 @@
   assert:
     that:
       - rollback_preview.changed == false
-      - '"<fvTenant name=\"anstest\" rn=\"tn-anstest\" status=\"deleted\">" in rollback_preview.diff'
+      - rollback_preview.diff.polUni.children[0].fvTenant.attributes.name == 'anstest'
+      - rollback_preview.diff.polUni.children[0].fvTenant.attributes.rn == 'tn-anstest'
+      - rollback_preview.diff.polUni.children[0].fvTenant.attributes.status == 'created'
       - '"snapshots.diff.xml" in rollback_preview.url'
       - rollback_missing_param.failed == true
       - 'rollback_missing_param.msg == "state is rollback but all of the following are missing: import_policy"'
@@ -89,5 +91,6 @@
       - '"ce2_" in rollback_rollback.config.configImportP.attributes.fileName'
       - '".tar.gz" in rollback_rollback.config.configImportP.attributes.fileName'
       - '"fabric/configimp-anstest.json" in rollback_rollback.url'
-      - tenant_removed.changed == false
-      - tenant_removed.existing == []
+      - tenant_removed.changed == true
+      - 'tenant_removed.existing == [{"fvTenant": {"attributes": {"descr": "", "dn": "uni/tn-anstest", "name": "anstest", "nameAlias": "", "ownerKey": "", "ownerTag": ""}}}]'
+
