--- a/test/integration/targets/influxdb_user/tasks/tests.yml
+++ b/test/integration/targets/influxdb_user/tasks/tests.yml
@@ -82,6 +82,29 @@
         that:
           - same_user.changed == false
 
+- name: Test change user password in check mode
+  block:
+    - name: Change user password
+      influxdb_user: user_name=user user_password=user2 login_username=admin login_password=admin
+      check_mode: true
+      register: change_password
+
+    - name: Check that password changing succeeds with a change
+      assert:
+        that:
+          - change_password.changed == true
+
+- name: Test change user password
+  block:
+    - name: Change user password
+      influxdb_user: user_name=user user_password=user2 login_username=admin login_password=admin
+      register: change_password
+
+    - name: Check that password changing succeeds with a change
+      assert:
+        that:
+          - change_password.changed == true
+
 - name: Test remove user in check mode
   block:
     - name: Remove user
