--- a/test/integration/targets/ios_user/tests/cli/basic.yaml
+++ b/test/integration/targets/ios_user/tests/cli/basic.yaml
@@ -6,7 +6,7 @@
       - name: ansibletest2
       - name: ansibletest3
     state: absent
-    authorize: yes
+    provider: "{{ cli }}"
 
 - name: Create user (SetUp)
   ios_user:
@@ -14,7 +14,7 @@
     privilege: 15
     role: network-operator
     state: present
-    authorize: yes
+    provider: "{{ cli }}"
   register: result
 
 - assert:
@@ -27,7 +27,7 @@
     aggregate:
       - name: ansibletest2
       - name: ansibletest3
-    authorize: yes
+    provider: "{{ cli }}"
     state: present
     view: network-admin
   register: result
@@ -43,7 +43,7 @@
     privilege: 15
     role: network-operator
     state: present
-    authorize: yes
+    provider: "{{ cli }}"
   register: result
 
 - assert:
@@ -56,7 +56,7 @@
     aggregate:
       - name: ansibletest2
       - name: ansibletest3
-    authorize: yes
+    provider: "{{ cli }}"
     state: present
     view: network-admin
   register: result
@@ -73,7 +73,7 @@
       - name: ansibletest2
       - name: ansibletest3
     state: absent
-    authorize: yes
+    provider: "{{ cli }}"
   register: result
 
 - assert:
